--- a/jsNext/code/npm/package.json
+++ b/jsNext/code/npm/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "npmdemo",
-  "version": "1.0.0",
+  "name": "jz_test_utils",
+  "version": "1.1.0",
   "description": "a npm test demo",
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jz",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.26.1"
+  },
+  "devDependencies": {}
 }
