--- a/miniProgram/music/app.json
+++ b/miniProgram/music/app.json
@@ -3,7 +3,10 @@
     "pages/home-music/index",
     "pages/home-video/index",
     "pages/detail-video/index",
-    "pages/detail-search/index"
+    "pages/detail-search/index",
+    "pages/detail-songs/index",
+    "pages/cat-list/index",
+    "pages/music-player/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
